# verfishd

./: CITATION.cff  README.md  pyproject.toml  pyproject.toml-old  readme.md
.github/workflows/: publish.yml  pytest.yml
Examples/: example.cnv  simple_simulation.py  simulation_with_cnv.py
Examples/real_example/: example_factors.py
Examples/real_example/cnv/: example.cnv  simulation_with_cnv.py
Examples/real_example/csv/: aggregated_data_8A.csv  simulation_with_csv.py
VerFishD/core/: __init__.py  physical_stimuli_profile.py
tests/core/: conftest.py  test_migration_speed.py  test_model.py  test_physical_factor.py  test_physical_stimuli.py
tests/core/fixtures/: migration_speed_fixtures.py  physical_factor_fixtures.py  physical_stimuli_fixtures.py  temperature_factor_fixtures.py  temperature_stimuli.csv
verfishd/: __init__.py
verfishd/core/: model.py  physical_factor.py  physical_stimuli_profile.py
verfishdblabla/core/: model.py
