[project]
name = "verfishd"
dynamic = [ "version" ]
description = "Simulate the vertical fish distribution influenced by physical stimuli"
authors = [
 { name = "Jan Meischner", email = "jan.meischner@googlemail.com"}
]
readme = "README.md"
keywords = ["vertical fish distribution", "data-science", "simulation", "modelling"]
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Oceanography",
  "Typing :: Typed"
]
license = "MSC"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas >=2.2.3,<3.0.0",
    "numpy >=2.2.2,<3.0.0",
    "seabird >=0.12.0,<1.0.0",
    "matplotlib >=3.10.0,<4.0.0",
    "rich >=13.9.4,<14.0.0",
    "setuptools >=78.1.1"
]

[project.urls]
repository = "https://github.com/marine-data-science/verfishd"

[tool.poetry]
version = "0.0.1"  # base version

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
